examples/test/testpolicy8435.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8435
  namespace: namespace425
spec:
  podSelector:
    matchLabels:
      key36: value45
      key6: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value4
      podSelector:
        matchLabels:
          key37: value14
          key49: value38
